force-app/main/default/objects/Invitation__c/Invitation__c.object-meta.xml
<CustomObject>
    <label>Invitation</label>
    <nameField>
        <displayFormat>Invite-{0}</displayFormat>
        <label>Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>